# CFTree

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  environment.yml  main.py  pyproject.toml
.github/workflows/: docker-smoke.yml
cases/emmer_compascuum/: case_area.geojson
docker/: entrypoint.sh  smoke_test.py
scripts/: README.md  bench_morphometrics.py  get_data.py  reconstruction.py  segmentation.py
src/: config.py  stages.py  tile_layout.py
src/get_data/: clip_tile.py  download_geotiles.py  extract_dtm.py  lax_partial.py  stream_copc.py  tile_sources.py  tiles_clipper_robust.sh
src/reconstruction/: alpha_wrap_tree.py  construct_geometry.py  extract_tree_metrics.py  gpu_metrics.py  write_cityjson.py
src/reconstruction/AlphaWrap/: point_set_wrap_cli.cpp
src/segmentation/: generalize_forest_ids.py  segment_tile.py
src/vegetation_filter/: HOMED_vegetation_filter.py
tests/: test_get_data_cache.py  test_lax_partial.py  test_pipeline_exit_codes.py  test_reuse_and_retry.py
